fix(buttons): fix missing border radius
see telerik/kendo-angular#1142

--- a/packages/default/scss/button/_layout.scss
+++ b/packages/default/scss/button/_layout.scss
@@ -108,6 +108,7 @@
         }
 
         &.k-widget {
+            border-radius: $border-radius;
             border-width: 0;
             display: inline-block;
         }
@@ -186,6 +187,7 @@
     }
 
     .k-split-button.k-widget {
+        border-radius: $border-radius;
         border-width: 0;
     }
 
